
	* tools/apiGen/ApiGen.hs: deal with more complicated formatting,
	definition lists, itemised lists, subsections, inline and titled
	program listing examples.

	* tools/apiGen/gen-all.sh: now works with the latest version of gtk

	* tools/apiGen/Template.chs: import System.Glib.FFI rather than
	Foreign, also a couple cosmetic improvements.

2005-01-09 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/format-docs.xsl: fix generation of function version
	numbers when they have no version given.

	* tools/apiGen/ApiGen.hs: Fix for when no functions are defined in the
	documentation file. Also, take the c2hs context prefix and lib values
	from the api file be default.

2005-01-08 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk.hs: commit the grand hierarchical namespace
	conversion. If it all goes wrong, revert back to the tag
	'pre-hierarchical-names-conversion'.

	* gtk/Graphics/UI/Gtk/Abstract/Bin.chs,
	gtk/Graphics/UI/Gtk/Abstract/Box.chs,
	gtk/Graphics/UI/Gtk/Abstract/ButtonBox.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Container.chs,
	gtk/Graphics/UI/Gtk/Abstract/Misc.chs,
	gtk/Graphics/UI/Gtk/Abstract/Object.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Paned.chs.pp,
	gtk/Graphics/UI/Gtk/Abstract/Range.chs,
	gtk/Graphics/UI/Gtk/Abstract/Scale.chs,
	gtk/Graphics/UI/Gtk/Abstract/Scrollbar.hs,
	gtk/Graphics/UI/Gtk/Abstract/Separator.hs,
	gtk/Graphics/UI/Gtk/Abstract/Widget.chs: add abstract category

	* gtk/Graphics/UI/Gtk/Buttons/Button.chs.pp,
	gtk/Graphics/UI/Gtk/Buttons/CheckButton.chs,
	gtk/Graphics/UI/Gtk/Buttons/RadioButton.chs,
	gtk/Graphics/UI/Gtk/Buttons/ToggleButton.chs: button category
	
	* gtk/Graphics/UI/Gtk/Display/AccelLabel.chs,
	gtk/Graphics/UI/Gtk/Display/Image.chs,
	gtk/Graphics/UI/Gtk/Display/Label.chs,
	gtk/Graphics/UI/Gtk/Display/ProgressBar.chs,
	gtk/Graphics/UI/Gtk/Display/Statusbar.chs: display category

	* gtk/Graphics/UI/Gtk/Embedding/Embedding.hsc,
	gtk/Graphics/UI/Gtk/Embedding/Plug.chs,